# dvars

./: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
dvars/: __init__.py
dvars/dars/: __init__.py  dars.py
examples/: example_dars_esmdb.ipynb
examples/data/esmdb/: CZ.DPC..HNN.D.INT-20250227_0000079.SA.MP.ASC  CZ.DPC..HNN.D.INT-20250227_0000079.SD.MP.ASC  CZ.DPC..HNN.INT-20250227_0000079.ACC.MP.mseed
libsrc/: Makefile
